# initrd

./: .gitignore  build.sh  clean.sh  downoload.sh  make-config.sh  readme.md  run.sh
configs/: busybox  init
configs/etc/network/: interfaces
configs/kernel/: .config
examples/graphics/: Makefile  simple.c
examples/simple-ui/: CMakeLists.txt  fb.cpp  guitext.cpp  main.cpp  main.sh  readme.md
examples/simple-ui/include/: fb.hpp  guitext.hpp
